--- a/package.json
+++ b/package.json
@@ -1,30 +1,35 @@
 {
-  "name": "sales",
+  "name": "carsales",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "sales/node_modules/.bin/nest build",
-    "format": "sales/node_modules/.bin/prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
-    "start": "sales/node_modules/.bin/nest start",
-    "start:dev": "sales/node_modules/.bin/nest start --watch",
-    "start:debug": "sales/node_modules/.bin/nest start --debug --watch",
+    "build": "./node_modules/.bin/nest build",
+    "format": "./node_modules/.bin/prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
+    "start": "./node_modules/.bin/nest start",
+    "start:dev": "./node_modules/.bin/nest start --watch",
+    "start:debug": "./node_modules/.bin/nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "sales/node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
-    "test": "sales/node_modules/.bin/jest",
-    "test:watch": "sales/node_modules/.bin/jest --watch",
-    "test:cov": "sales/node_modules/.bin/jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register sales/node_modules/.bin/jest --runInBand",
-    "test:e2e": "sales/node_modules/.bin/jest --config ./test/jest-e2e.json"
+    "lint": "./node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
+    "test": "./node_modules/.bin/jest",
+    "test:watch": "./node_modules/.bin/jest --watch",
+    "test:cov": "./node_modules/.bin/jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/jest --runInBand",
+    "test:e2e": "./node_modules/.bin/jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/typeorm": "^10.0.2",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "sqlite3": "^5.1.7",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -39,7 +44,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "jest": "^29.5.0",
+    "jest": "^29.7.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
