--- a/package.json
+++ b/package.json
@@ -6,21 +6,24 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "./node_modules/.bin/nest build",
     "format": "./node_modules/.bin/prettier --write \\\"src/**/*.ts\\\" \\\"test/**/*.ts\\\"",
-    "start": "./node_modules/.bin/nest start",
-    "start:dev": "./node_modules/.bin/nest start --watch",
-    "start:debug": "./node_modules/.bin/nest start --debug --watch",
+    "start": "cross-env NODE_ENV=development ./node_modules/.bin/nest start",
+    "start:dev": "cross-env NODE_ENV=development ./node_modules/.bin/nest start --watch",
+    "start:debug": "cross-env NODE_ENV=development ./node_modules/.bin/nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "./node_modules/.bin/eslint \\\"{src,apps,libs,test}/**/*.ts\\\" --fix",
-    "test": "./node_modules/.bin/jest",
-    "test:watch": "./node_modules/.bin/jest --watch --maxWorkers=1",
-    "test:cov": "./node_modules/.bin/jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/jest --runInBand",
-    "test:e2e": "./node_modules/.bin/jest --config ./test/jest-e2e.json"
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/jest",
+    "test:watch": "cross-env NODE_ENV=test ./node_modules/.bin/jest --watch --maxWorkers=1",
+    "test:cov": "cross-env NODE_ENV=test ./node_modules/.bin/jest --coverage",
+    "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register ./node_modules/.bin/jest --runInBand",
+    "test:e2e": "cross-env NODE_ENV=test ./node_modules/.bin/jest --config ./test/jest-e2e.json --maxWorkers=1",
+    "typeorm": "cross-env NODE_ENV=development node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.3",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
@@ -28,10 +31,12 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cookie-session": "^2.1.0",
+    "cross-env": "^7.0.3",
     "reflect-metadata": "^0.2.0",
+    "rimraf": "^3.0.2",
     "rxjs": "^7.8.1",
     "sqlite3": "^5.1.7",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.2.45"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -48,11 +53,10 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.0",
-    "source-map-support": "^0.5.21",
     "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.1.3"
   },
